frontend/app-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: inventoryjs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dahol/reactfrontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
