frontend/app-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventoryjs-frontend-ingress
  namespace: inventoryjs-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - "inventory.findmyapp.net"
      secretName: inventory-findmyapp-net-staging-new-tls
  rules:
    - host: "inventory.findmyapp.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
