frontend/app-config/dev/ingress_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventoryjs-frontend-ingress2
  namespace: inventoryjs-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - "2.findmyapp.net"
      secretName: findmyapp-net-staging-tls2
  rules:
    - host: "2.findmyapp.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
